Text for Dropdown menu for Tables selection was edited and styled to prevent oerflow on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,6 @@ body {
     font-size: 3.2em;
 }
     .dropdown-text{
-        font-size: 0.69rem;
+        font-size: 0.75rem;
     }
 }
